test_programs/compile_failure/noirc_frontend_tests_errors_if_while_body_type_is_not_unit/src/main.nr

    unconstrained fn main() {
        while 1 == 1 {
            1
        }
    }
    